fix button wrapping

--- a/viral-vtubers-frontend/src/app/shared/components/navbar/navbar.component.scss
+++ b/viral-vtubers-frontend/src/app/shared/components/navbar/navbar.component.scss
@@ -126,6 +126,8 @@
   text-transform: uppercase;
   font-size: $font-size-body-3;
 
+  white-space: nowrap;
+
   &:hover {
     transform: scale(1.05);
   }
